--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -4,10 +4,10 @@
 <html lang="en" >
     
     <head>
-        <title>Hackernation</title>
         <meta charset="utf-8">
+        <title>Hackernation</title>
 
-        <!-- <base href='/'> -->
+        <base href='/'>
 
         <!-- CSS -->
         <link rel="stylesheet" href="assets/libs/bootstrap/dist/css/bootstrap.min.css">
