--- a/public/app/views/pages/problems.html
+++ b/public/app/views/pages/problems.html
@@ -8,17 +8,12 @@
     <div class="col-lg-12">
 
         
-
         <div class="well">
-            <ul class="list-group" >
-                <br>
-                <li class="list-group-item" >1. <a href="#">¡Hola mundo!</a></li>
-                <br>
-                <li class="list-group-item" >2. <a href="#">Sucesión de Fibonacci</a></li>
-                <br>
-                <li class="list-group-item" >3. <a href="#">SMS con teclado numérico</a></li>
-                <br>
-                <li class="list-group-item" >4. <a href="#">Josephus y suicidio masivo</a></li>
+            <ul class="list-group">
+                <li class="list-group-item" ng-repeat="p in problem.problems">
+                    {{ p._id }} . <a href="#"> {{ p.title }} </a>
+                </li>
+                
             </ul>
         </div>
 
